--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -16,5 +16,7 @@
     "404_content":"我们对我们的界面进行了一定程度的调整，您所请求的页面可能已经被永久移动",
     "404_advices":"在下面的连接中找找",
     "question_mark":"？",
+    "copyrights":"版权所有",
+    "now":"现在",
     "dot":"。"
 }
