--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,6 +15,8 @@
     "404":"Not Found a Page",
     "404_content":"Recently, we rearranged our website and your requested resources may be moved to other places",
     "404_advices":"Find hints in below",
+    "copyrights":"Copyrights",
+    "now":"now",
     "question_mark":"?",
     "dot":"."
     
